@@ -20,7 +20,7 @@
 #ifndef _SEEN_DATABASE_H
 #define _SEEN_DATABASE_H 1
 
-char* db_create(char *dbfarm, char* dbname, char maintenance);
+char* db_create(char *dbfarm, char* dbname);
 char* db_destroy(char* dbname);
 
 #endif
